# OpenCL-Test

./: CMakeLists.txt  ClUtils.cpp  ClUtils.h  PI.cl  README.md  main.cpp
cmake/: parser.py
